# OpenGL

./: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
dependencies/easylogging/: configuration.conf
dependencies/glad/: CMakeLists.txt  glad.c  glad.h
dependencies/imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp
include/: ErrorHandle.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
shaders/: shader.shader
src/: ErrorHandle.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  glad.c
